GSvar: added splitter handle to CNV and SV dialogs (main filters are now collapsible as well).

--- a/src/GSvar/MainWindow.ui
+++ b/src/GSvar/MainWindow.ui
@@ -90,7 +90,7 @@
             <enum>Qt::Horizontal</enum>
            </property>
            <property name="childrenCollapsible">
-            <bool>false</bool>
+            <bool>true</bool>
            </property>
            <widget class="QWidget" name="verticalLayoutWidget">
             <layout class="QVBoxLayout" name="verticalLayout_3">
