--- a/src/GSvar/MainWindow.ui
+++ b/src/GSvar/MainWindow.ui
@@ -538,6 +538,7 @@
      <addaction name="separator"/>
      <addaction name="actionCohortAnalysis"/>
      <addaction name="separator"/>
+     <addaction name="actionUploadVariantToClinVar"/>
      <addaction name="actionShowPublishedVariants"/>
     </widget>
     <addaction name="menuVariant_search"/>
@@ -1451,6 +1452,15 @@
   <action name="actionImportSequencingRuns">
    <property name="text">
     <string>Sequencing run</string>
+   </property>
+  </action>
+  <action name="actionUploadVariantToClinVar">
+   <property name="icon">
+    <iconset resource="GSvar.qrc">
+     <normaloff>:/Icons/ClinGen.png</normaloff>:/Icons/ClinGen.png</iconset>
+   </property>
+   <property name="text">
+    <string>Upload variant to ClinVar</string>
    </property>
   </action>
  </widget>
