--- a/src/GSvar/ReportVariantSelectionDialog.ui
+++ b/src/GSvar/ReportVariantSelectionDialog.ui
@@ -6,12 +6,12 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>500</width>
-    <height>300</height>
+    <width>800</width>
+    <height>600</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Report Variant Selection</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
