src/GSvar/ExpressionOverviewWidget.ui: minor UI changes/fixes
src/GSvar/Expression*Widget.cpp: switched to non-log values and highlight current value

--- a/src/GSvar/ExpressionOverviewWidget.ui
+++ b/src/GSvar/ExpressionOverviewWidget.ui
@@ -124,6 +124,19 @@
             </property>
            </spacer>
           </item>
+          <item>
+           <spacer name="horizontalSpacer_2">
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>40</width>
+              <height>0</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
          </layout>
         </item>
         <item>
@@ -136,7 +149,27 @@
            </widget>
           </item>
           <item>
-           <widget class="QPlainTextEdit" name="te_selected_genes"/>
+           <widget class="QPlainTextEdit" name="te_selected_genes">
+            <property name="minimumSize">
+             <size>
+              <width>300</width>
+              <height>0</height>
+             </size>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <spacer name="horizontalSpacer_3">
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>40</width>
+              <height>0</height>
+             </size>
+            </property>
+           </spacer>
           </item>
          </layout>
         </item>
@@ -182,7 +215,7 @@
              <x>0</x>
              <y>0</y>
              <width>535</width>
-             <height>103</height>
+             <height>208</height>
             </rect>
            </property>
            <layout class="QVBoxLayout" name="verticalLayout_5"/>
@@ -190,14 +223,14 @@
          </widget>
         </item>
         <item>
-         <spacer name="verticalSpacer_2">
+         <spacer name="horizontalSpacer_4">
           <property name="orientation">
-           <enum>Qt::Vertical</enum>
+           <enum>Qt::Horizontal</enum>
           </property>
           <property name="sizeHint" stdset="0">
            <size>
-            <width>20</width>
-            <height>40</height>
+            <width>40</width>
+            <height>0</height>
            </size>
           </property>
          </spacer>
